--- a/css/style.css
+++ b/css/style.css
@@ -489,12 +489,71 @@ body {
   margin-left: 70px;
 }
 
+.footer-sign-up {
+  margin-left: 93px;
+}
+
+.footer-sign-up input {
+  width: 358px;
+  height: 50px;
+  margin-top: 20px;
+  align-items: center;
+  background-color: #2F303A;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding-left: 16px;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-sign-up input:focus {
+  background-color:var(--secondary-white-color);
+}
+
+.footer-sign-up input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  display: flex;
+  align-items: center;
+  color: rgba(255, 255, 255, 0.6);
+}
+
 .footer-text {
   font-size: 14px;
   line-height: 1.1;
   text-transform: uppercase;
   color: var(--secondary-white-color);
 }
+
+.btn-sign-up {
+  width: 200px;
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--secondary-white-color);
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  margin-left: 12px;
+  padding: 10px 62px 10px 28px;
+  position: relative;
+}
+
+.btn-sign-up svg {
+  position: absolute;
+  top: 50%;
+  right: 28px;
+  transform: translateY(-50%);
+}
+
 
 .footer-list {
   display: flex;
@@ -792,6 +851,7 @@ display: block;
   font-size: 14px;
   line-height: 1.71;
   color: #757575;
+  cursor: pointer;
 }
 
 .checkbox {
