--- a/css/style.css
+++ b/css/style.css
@@ -498,17 +498,23 @@ body {
   height: 50px;
   margin-top: 20px;
   align-items: center;
+  color:var(--secondary-white-color);
   background-color: #2F303A;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   padding-left: 16px;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: none;
 }
 
 .footer-sign-up input:focus {
-  background-color:var(--secondary-white-color);
+  background-color:#2F303A;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  color:var(--secondary-white-color);
+  border: 1px solid var(--accent-color);
 }
 
 .footer-sign-up input::placeholder {
@@ -720,6 +726,10 @@ body {
 .modal {
   width: 528px;
   height: 581px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
   position: absolute;
   padding: 40px;
   left: 50%;
@@ -773,7 +783,7 @@ display: block;
 .name-wrap label {
   font-weight: 400;
   font-size: 12px;
-  line-height: 14px;
+  line-height: 1.16;
   letter-spacing: 0.01em;
   color: #757575;
   margin-bottom: 4px;
